--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -224,6 +224,181 @@ cards:
 
 ##############################################################################################################################
 
+# not shown for UK (has separate radio button card)
+
+  - heading: Cases by specimen date
+    cardType: chart
+    locationAware:
+      excluded:
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
+      Individuals tested positive more than once are only counted once, on the date of their first
+      positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
+
+    download:
+      - newCasesBySpecimenDate
+      - cumCasesBySpecimenDate
+
+    tabs:
+      - heading: Daily
+        tabType: chart
+        barType: overlay
+        fields:
+          - label: Number of cases
+            value: newCasesBySpecimenDate
+            tooltip: Daily number of new people tested positive by date the sample was taken from the person
+            type: bar
+            colour: 0
+            rollingAverage: false
+            highlight: 
+              from: -5
+              to: 0
+              colour: 6
+              label: "Most recent 5 days (incomplete)"
+
+          - label: Cases (7-day average)
+            value: newCasesBySpecimenDate
+            tooltip: 7-day rolling average of the daily number of people tested positive by specimen date
+            type: line
+            colour: 3
+            fill: false
+            rollingAverage:
+              window: 7
+              clipEnd: 3 #no of days to exclude for incomplete data
+
+      - heading: Cumulative
+        tabType: chart
+        fields:
+          - label: Number of cases
+            value: cumCasesBySpecimenDate
+            tooltip: Cumulative total number of new people tested positive by date the sample was taken from the person
+            type: bar
+            colour: 0
+            rollingAverage: false
+            highlight: 
+              from: -5
+              to: 0
+              colour: 6
+              label: "Most recent 5 days (incomplete)"
+
+      - heading: Data
+        tabType: table
+        fields:
+          - label: Specimen date
+            value: date
+            type: date
+            tooltip: Date the sample was taken from the person
+
+          - label: Daily cases
+            value: newCasesBySpecimenDate
+            type: numeric
+            tooltip: Daily number of new people tested positive by date the sample was taken from the person
+
+          - label: Cumulative cases
+            value: cumCasesBySpecimenDate
+            type: numeric
+            tooltip: Cumulative total number of new people tested positive by date the sample was taken from the person
+
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/cases/cardCasesTimeSeries.md
+
+##############################################################################################################################
+
+  # {{ StartDevOnlyBlock }}
+
+  - heading: Cases by specimen date age demographics [experimental]
+    cardType: chart
+    locationAware:
+      excluded:
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
+      Individuals tested positive more than once are only counted once, on the date of their first
+      positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
+
+    download:
+      - newCasesBySpecimenDateAgeDemographics
+    
+    tabs:
+      - heading: Heatmap
+        tabType: heatmap
+        fields:
+          - label: Age demographics
+            value: newCasesBySpecimenDateAgeDemographics
+            amplitude: rollingRate
+            amplitudeLabel: Rolling rate
+            metricLabel: Age group
+            parameter: age
+            metrics:
+            - label: 0 to 4
+              value: "00_04"
+
+            - label: 5 to 9
+              value: "05_09"
+              
+            - label: 10 to 14
+              value: "10_14"
+
+            - label: 15 to 19
+              value: "15_19"
+
+            - label: 20 to 24
+              value: "20_24"
+
+            - label: 25 to 29
+              value: "25_29"
+
+            - label: 30 to 34
+              value: "30_34"
+
+            - label: 35 to 39
+              value: "35_39"
+
+            - label: 40 to 44
+              value: "40_44"
+
+            - label: 45 to 49
+              value: "45_49"
+
+            - label: 50 to 54
+              value: "50_54"
+
+            - label: 55 to 59
+              value: "55_59"
+
+            - label: 60 to 64
+              value: "60_64"
+
+            - label: 65 to 69
+              value: "65_69"
+
+            - label: 70 to 74
+              value: "70_74"
+
+            - label: 75 to 79
+              value: "75_79"
+
+            - label: 80 to 84
+              value: "80_84"
+
+            - label: 85 to 89
+              value: "85_89"
+
+            - label: 90+
+              value: "90+"
+
+  # {{ EndDevOnlyBlock }}
+
+##############################################################################################################################
+
 # Only shown for UK (identical to non-UK version but needs different abstract)
 
   - heading: Cases by date reported
@@ -377,294 +552,6 @@ cards:
         filename: cardMetadata/cases/cardCasesTimeSeries.md
 
 ##############################################################################################################################
-
-# not shown for UK (has separate radio button card)
-
-  - heading: Cases by specimen date
-    cardType: chart
-    locationAware:
-      excluded:
-        areaType:
-          - overview
-
-    fullWidth: true
-    abstract: >
-      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
-      Individuals tested positive more than once are only counted once, on the date of their first
-      positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
-
-    download:
-      - newCasesBySpecimenDate
-      - cumCasesBySpecimenDate
-
-    tabs:
-      - heading: Daily
-        tabType: chart
-        barType: overlay
-        fields:
-          - label: Number of cases
-            value: newCasesBySpecimenDate
-            tooltip: Daily number of new people tested positive by date the sample was taken from the person
-            type: bar
-            colour: 0
-            rollingAverage: false
-            highlight: 
-              from: -5
-              to: 0
-              colour: 6
-              label: "Most recent 5 days (incomplete)"
-
-          - label: Cases (7-day average)
-            value: newCasesBySpecimenDate
-            tooltip: 7-day rolling average of the daily number of people tested positive by specimen date
-            type: line
-            colour: 3
-            fill: false
-            rollingAverage:
-              window: 7
-              clipEnd: 3 #no of days to exclude for incomplete data
-
-      - heading: Cumulative
-        tabType: chart
-        fields:
-          - label: Number of cases
-            value: cumCasesBySpecimenDate
-            tooltip: Cumulative total number of new people tested positive by date the sample was taken from the person
-            type: bar
-            colour: 0
-            rollingAverage: false
-            highlight: 
-              from: -5
-              to: 0
-              colour: 6
-              label: "Most recent 5 days (incomplete)"
-
-      - heading: Data
-        tabType: table
-        fields:
-          - label: Specimen date
-            value: date
-            type: date
-            tooltip: Date the sample was taken from the person
-
-          - label: Daily cases
-            value: newCasesBySpecimenDate
-            type: numeric
-            tooltip: Daily number of new people tested positive by date the sample was taken from the person
-
-          - label: Cumulative cases
-            value: cumCasesBySpecimenDate
-            type: numeric
-            tooltip: Cumulative total number of new people tested positive by date the sample was taken from the person
-
-      - heading: About 
-        tabType: metadata
-        filename: cardMetadata/cases/cardCasesTimeSeries.md
-
-##############################################################################################################################
-
-  # {{ StartDevOnlyBlock }}
-  - heading: Cases by specimen date age demographics - Above and below 60 [experimental]
-    cardType: chart
-    locationAware:
-      excluded:
-        areaType:
-          - overview
-
-    fullWidth: true
-    abstract: >
-      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
-      Individuals tested positive more than once are only counted once, on the date of their first
-      positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
-
-    download:
-      - newCasesBySpecimenDateAgeDemographics
-    
-    tabs:
-      - heading: Daily
-        tabType: chart
-        barType: stack
-        fields:
-          - label: Number of cases 60+
-            << : *specimenDateDemographics60Plus
-            tooltip: Daily number of new people tested positive by date the sample was taken from the person
-            type: bar
-            colour: 3
-            metric: cases
-            rollingAverage: false
-            
-          - label: Number of cases 0 to 59
-            << : *specimenDateDemographics0_59
-            tooltip: Daily number of new people tested positive by date the sample was taken from the person
-            type: bar
-            colour: 0
-            rollingAverage: false
-            metric: cases
-
-      - heading: Rolling rate
-        tabType: chart
-        barType: stack
-        fields:
-          - label: Number of cases 60+
-            << : *specimenDateDemographics60Plus
-            tooltip: Daily number of new people tested positive by date the sample was taken from the person
-            type: bar
-            colour: 3
-            metric: rollingRate
-            rollingAverage: false
-            
-          - label: Number of cases 0 to 59
-            << : *specimenDateDemographics0_59
-            tooltip: Daily number of new people tested positive by date the sample was taken from the person
-            type: bar
-            colour: 0
-            rollingAverage: false
-            metric: rollingRate
-
-      - heading: Data
-        tabType: nestedTable
-        fields:
-          - label: Date
-            value: date
-            type: date
-          
-          - label: "Cases: 0-59"
-            metric: cases
-            value: newCasesBySpecimenDateAgeDemographics
-            type: numeric
-            filters:
-              parameter: age
-              value: 00_59
-
-          - label: "Rolling sum: 0-59"
-            metric: rollingSum
-            value: newCasesBySpecimenDateAgeDemographics
-            type: numeric
-            filters:
-              parameter: age
-              value: 00_59
-
-          - label: "Rolling rate: 0-59"
-            metric: rollingRate
-            value: newCasesBySpecimenDateAgeDemographics
-            type: numeric
-            filters:
-              parameter: age
-              value: 00_59
-
-          - label: "Cases: 60+"
-            metric: cases
-            value: newCasesBySpecimenDateAgeDemographics
-            type: numeric
-            filters:
-              parameter: age
-              value: 60+
-
-          - label: "Rolling sum: 60+"
-            metric: rollingSum
-            value: newCasesBySpecimenDateAgeDemographics
-            type: numeric
-            filters:
-              parameter: age
-              value: 60+
-
-          - label: "Rolling rate: 60+"
-            metric: rollingRate
-            value: newCasesBySpecimenDateAgeDemographics
-            type: numeric
-            filters:
-              parameter: age
-              value: 60+
-
-
-  - heading: Cases by specimen date age demographics [experimental]
-    cardType: chart
-    locationAware:
-      excluded:
-        areaType:
-          - overview
-
-    fullWidth: true
-    abstract: >
-      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
-      Individuals tested positive more than once are only counted once, on the date of their first
-      positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
-
-    download:
-      - newCasesBySpecimenDateAgeDemographics
-    
-    tabs:
-      - heading: Heatmap
-        tabType: heatmap
-        fields:
-          - label: Age demographics
-            value: newCasesBySpecimenDateAgeDemographics
-            amplitude: rollingRate
-            amplitudeLabel: Rolling rate
-            metricLabel: Age group
-            parameter: age
-            metrics:
-            - label: 0 to 4
-              value: "00_04"
-
-            - label: 5 to 9
-              value: "05_09"
-              
-            - label: 10 to 14
-              value: "10_14"
-
-            - label: 15 to 19
-              value: "15_19"
-
-            - label: 20 to 24
-              value: "20_24"
-
-            - label: 25 to 29
-              value: "25_29"
-
-            - label: 30 to 34
-              value: "30_34"
-
-            - label: 35 to 39
-              value: "35_39"
-
-            - label: 40 to 44
-              value: "40_44"
-
-            - label: 45 to 49
-              value: "45_49"
-
-            - label: 50 to 54
-              value: "50_54"
-
-            - label: 55 to 59
-              value: "55_59"
-
-            - label: 60 to 64
-              value: "60_64"
-
-            - label: 65 to 69
-              value: "65_69"
-
-            - label: 70 to 74
-              value: "70_74"
-
-            - label: 75 to 79
-              value: "75_79"
-
-            - label: 80 to 84
-              value: "80_84"
-
-            - label: 85 to 89
-              value: "85_89"
-
-            - label: 90+
-              value: "90+"
-
-  # {{ EndDevOnlyBlock }}
-
-##############################################################################################################################
-
 
 # Not shown for UK (has separate date reported card for UK with different abstract) or sub-national (no data)
 
@@ -1454,7 +1341,124 @@ cards:
           filename: cardMetadata/cases/cardSevenDayCasesAndRates.md
 
 ##############################################################################################################################
+ 
+  # {{ StartDevOnlyBlock }}
 
+  - heading: Cases by specimen date age demographics - Above and below 60 [experimental]
+    cardType: chart
+    locationAware:
+      excluded:
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
+      Individuals tested positive more than once are only counted once, on the date of their first
+      positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
+
+    download:
+      - newCasesBySpecimenDateAgeDemographics
+    
+    tabs:
+      - heading: Daily
+        tabType: chart
+        barType: stack
+        fields:
+            - label: Number of cases 0 to 59
+            << : *specimenDateDemographics0_59
+            tooltip: Daily number of new people tested positive by date the sample was taken from the person
+            type: bar
+            colour: 3
+            rollingAverage: false
+            metric: cases
+
+          - label: Number of cases 60+
+            << : *specimenDateDemographics60Plus
+            tooltip: Daily number of new people tested positive by date the sample was taken from the person
+            type: bar
+            colour: 0
+            metric: cases
+            rollingAverage: false
+       
+      - heading: Rolling rate
+        tabType: chart
+        barType: line
+        fields:
+            - label: Number of cases 0 to 59
+            << : *specimenDateDemographics0_59
+            tooltip: Daily number of new people tested positive by date the sample was taken from the person
+            type: bar
+            colour: 0
+            rollingAverage: false
+            metric: rollingRate
+
+          - label: Number of cases 60+
+            << : *specimenDateDemographics60Plus
+            tooltip: Daily number of new people tested positive by date the sample was taken from the person
+            type: bar
+            colour: 3
+            metric: rollingRate
+            rollingAverage: false
+          
+      - heading: Data
+        tabType: nestedTable
+        fields:
+          - label: Date
+            value: date
+            type: date
+          
+          - label: "Cases: 0-59"
+            metric: cases
+            value: newCasesBySpecimenDateAgeDemographics
+            type: numeric
+            filters:
+              parameter: age
+              value: 00_59
+
+          - label: "Rolling sum: 0-59"
+            metric: rollingSum
+            value: newCasesBySpecimenDateAgeDemographics
+            type: numeric
+            filters:
+              parameter: age
+              value: 00_59
+
+          - label: "Rolling rate: 0-59"
+            metric: rollingRate
+            value: newCasesBySpecimenDateAgeDemographics
+            type: numeric
+            filters:
+              parameter: age
+              value: 00_59
+
+          - label: "Cases: 60+"
+            metric: cases
+            value: newCasesBySpecimenDateAgeDemographics
+            type: numeric
+            filters:
+              parameter: age
+              value: 60+
+
+          - label: "Rolling sum: 60+"
+            metric: rollingSum
+            value: newCasesBySpecimenDateAgeDemographics
+            type: numeric
+            filters:
+              parameter: age
+              value: 60+
+
+          - label: "Rolling rate: 60+"
+            metric: rollingRate
+            value: newCasesBySpecimenDateAgeDemographics
+            type: numeric
+            filters:
+              parameter: age
+              value: 60+
+
+   # {{ EndDevOnlyBlock }} 
+
+##############################################################################################################################
   - heading: Cases by area (last 7 days)
     cardType: simpleTableStatic
     fullWidth: false
